# PDS_Proyecto_final

./: README.md  README.md~
MOMA/: .python-version  descarga_moma.sh  moma.py  pyproject.toml
MOMA/sql/: create_raw_tables.sql  create_schemas.sql  to_cleaned.sql  to_semantic.sql
config/: settings.toml
