[tool.poetry]
name = "moma"
version = "0.1.0"
description = "moma proyecto final"
authors = ["equipo"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
psycopg2 = "^2.8"
click = "^7.0"
dynaconf = "^2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
